--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "validator": "^13.11.0"
   }
 }
