--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +23,7 @@
     "nodemailer": "^6.9.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redux-thunk": "^3.1.0",
     "validator": "^13.11.0"
   }
 }
