--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redux-thunk": "^3.1.0",
+    "stripe": "^14.23.0",
     "validator": "^13.11.0"
   }
 }
